# Android-bbc-audiowaveform

./: build.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ccodetesting/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  testing.h
app/src/main/cpp/libwaveform/: CMakeLists.txt  compile.sh
app/src/main/cpp/libwaveform/audiowaveform/: CMakeLists.txt
app/src/main/cpp/libwaveform/audiowaveform/src/: GdImageRenderer.h
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/LIB_GD/: CMakeLists.txt  Makefile  debug_EXECUTABLE
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/LIB_GD/debug_BUILD/: CMakeCache.txt  Makefile  cmake_install.cmake
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/LIB_GD/headers/: gd_intern.h
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/LIB_GD/libpng-android/: CMakeLists.txt
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/LIB_GD/src/: gd_png.c
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/libid3tag-0.15.1b/: CMakeLists.txt  Makefile  config.status  libtool
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/libid3tag-0.15.1b/msvc++/: Makefile
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/libmad-0.15.1b/: Makefile  config.h  config.status  configure  libtool
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/libmad-0.15.1b-archlinux/: CMakeLists.txt  libmad.so.0.2.1  patch.sh
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/libmad-0.15.1b/.deps/: bit.Plo  decoder.Plo  frame.Plo  layer12.Plo  layer3.Plo  stream.Plo  timer.Plo
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/libmad-0.15.1b/.libs/: libmad.so.0.2.1
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/libmad-0.15.1b/autom4te.cache/: output.0  requests  traces.0
app/src/main/cpp/libwaveform/audiowaveform/src/dependencies/libmad-0.15.1b/msvc++/: Makefile
app/src/main/cpp/libwaveform/audiowaveform/test/: OptionHandlerTest.cpp
app/src/main/cpp/libwaveform/audiowaveform/test/data/: test_file_mono.mp3.reapeaks  test_file_mono_converted.wav.reapeaks
app/src/main/cpp/libwaveform/debug_BUILD/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
app/src/main/cpp/libwaveform/debug_BUILD/audiowaveform/: CTestTestfile.cmake  Config.h  Makefile  audiowaveform  cmake_install.cmake
app/src/main/cpp/libwaveform/debug_BUILD/audiowaveform/src/dependencies/LIB_GD/: Makefile  cmake_install.cmake
app/src/main/cpp/libwaveform/debug_BUILD/audiowaveform/src/dependencies/libid3tag-0.15.1b/: Makefile  cmake_install.cmake
app/src/main/cpp/libwaveform/debug_BUILD/audiowaveform/src/dependencies/libmad-0.15.1b/: Makefile  cmake_install.cmake
app/src/main/cpp/libwaveform/debug_BUILD/audiowaveform/src/dependencies/libsndfile/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  sndfile.pc
app/src/main/cpp/libwaveform/debug_BUILD/audiowaveform/src/dependencies/libsndfile/src/: config.h
app/src/main/cpp/libwaveform/debug_BUILD/gtest/: Makefile  cmake_install.cmake
app/src/main/cpp/libwaveform/debug_BUILD/gtest/googletest-src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/src/main/cpp/libwaveform/debug_BUILD/gtest/googletest-src/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/src/main/cpp/libwaveform/debug_BUILD/gtest/googletest-src/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
app/src/main/cpp/libwaveform/dir2/: CMakeLists.txt  main.cpp
app/src/main/cpp/libwaveform/gtest/: CMakeLists.txt
app/src/main/cpp/libwaveform/testBuilder/: CMakeLists.txt
app/src/main/java/com/example/ccodetesting/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ccodetesting/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
